<resources>
    <string name="jogador_atual">"Vez do jogador %1$s."</string>
    <string name="frase_vencedor">"O jogador %1$s ganhou!"</string>
    <string name="app_name">"Reversi Othello"</string>
    <string name="msg_ip_address">IP do servidor: %s\nÀ espera dos jogadores…</string>
    <string name="modo_servidor">Servidor</string>
    <string name="client_mode">Modo cliente</string>
    <string name="ask_ip">Endereco do servidor:</string>
    <string name="button_connect">Conectar</string>
    <string name="error_address">Endereco invalido</string>
    <string name="button_cancel">Cancelar</string>
    <string name="btn_emulator">Conectar a emulador</string>
    <string name="game_over">Fim do jogo</string>
    <string name="menu_inicial">Menu inicial</string>
    <string name="ativar_bomba">Ativar bomba</string>
    <string name="ativar_troca">Ativar troca</string>
    <string name="ver_jogadas">Ver jogadas</string>
    <string name="passar_vez">Passar vez</string>
    <string name="game_title">Othello / Reversi</string>
    <string name="modo_local">Modo local</string>
    <string name="modo_remoto">Modo remoto</string>
    <string name="servidor">Servidor</string>
    <string name="cliente">Cliente</string>
    <string name="modo_remoto_3_jogadores">Modo remoto 3 jogadores</string>
    <string name="gamelogo">logoJogo</string>
    <string name="editar_nome">Editar nome</string>
    <string name="editar_foto">Editar foto</string>
    <string name="nome_jogador">Editar nome de jogador</string>
    <string name="ask_name">Insira um nome:</string>
    <string name="tirar_foto">Tirar foto</string>
</resources>